--- a/templates/livevideo.html
+++ b/templates/livevideo.html
@@ -7,24 +7,10 @@
 <body>
   <video id="video" controls autoplay style="width: 100%; max-width: 720px;"></video>
   <script>
-        const video = document.getElementById('video');
+           const hls = new Hls();
 
-                if (Hls.isSupported()) {
-                const hls = new Hls();
-
-                hls.loadSource('http://localhost:8099/hls/stream.m3u8');
-                hls.attachMedia(video);
-
-                hls.on(Hls.Events.ERROR, function (event, data) {
-                    console.error('HLS.js error:', data);
-                });
-
-                } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-                // For Safari
-                video.src = 'http://localhost:8099/hls/stream.m3u8';
-                } else {
-                alert("HLS not supported in this browser.");
-                };
-  </script>
+            hls.loadSource('http://localhost:8099/hls/stream.m3u8');
+            hls.attachMedia(video);
+</script>
 </body>
-</html
+</html>
