--- a/templates/stream.html
+++ b/templates/stream.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Stream to RTMP</title>
+  <title>Stream</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-zinc-900 text-white h-screen">
@@ -71,6 +71,16 @@
     stopbtn.addEventListener("click", function () {
       mediarecorder.stop();
       alert("Recording stopped.");
+
+    fetch("/stop-stream", {
+      method: "POST",
+      headers: {
+    "Content-Type": "text/plain"
+     },
+     body: "stopping"
+    });
+
+
     });
 
     // Chat logic
