--- a/templates/form.html
+++ b/templates/form.html
@@ -11,7 +11,7 @@
   <div class="bg-zinc-800 p-8 rounded-xl shadow-md w-full max-w-lg space-y-6">
     <h2 class="text-2xl font-bold text-center">Start Your Stream</h2>
 
-    <form method="post">
+    <form method="post" >
     <label class="block">
       <span class="text-sm text-gray-300">Stream Title</span>
       <input type="text" id="title" name="title" class="mt-1 w-full px-4 py-2 rounded bg-zinc-700 focus:outline-none" placeholder="Enter stream title">
@@ -33,12 +33,11 @@
       const title = document.getElementById("title").value.trim();
       const description = document.getElementById("description").value.trim();
 
-      if (!title || !description) {
-        alert("Please fill out both title and description.");
-        return;
-      }
-      window.location.href = "http://localhost:8095/stream.html";
+      if (!title ||  !description) {
+                   alert("The field is not filled")           
+      } 
     });
+
   </script>
 
 </body>
