--- a/templates/stream.html
+++ b/templates/stream.html
@@ -62,7 +62,7 @@
           }
         };
 
-        mediarecorder.start(200); // send chunks every 200ms
+        mediarecorder.start(200); 
       })
       .catch(function (err) {
         alert("Camera/mic error: " + err);
