--- a/templates/livescreen.html
+++ b/templates/livescreen.html
@@ -37,7 +37,7 @@
    
      const video = document.getElementById("video");
     const hls = new Hls();
-    hls.loadSource('http://localhost:8099/hls/stream.m3u8');
+    hls.loadSource('http://localhost:8099/hls-screen/screen.m3u8');
     hls.attachMedia(video);
 
    
